fix: 設定関連周辺にバグ修正

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,16 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - "frontend/**"
+      - "build/**"
+      - "wails.json"
+      - ".github/workflows/build.yml"
+      - "Makefile"
+      - ".tool-versions"
   workflow_dispatch:
 
 env:
