--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,15 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - "frontend/**"
+      - ".github/workflows/ci.yml"
+      - "Makefile"
+      - ".golangci.yml"
+      - ".tool-versions"
 
 env:
   FRONTEND_DIR: frontend
@@ -55,11 +64,13 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Install golangci-lint
-        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      - name: Get golangci-lint version
+        id: golangci-lint-version
+        run: echo "version=v$(grep '^golangci-lint ' .tool-versions | awk '{print $2}')" >> "$GITHUB_OUTPUT"
 
-      - name: Lint
-        run: make lint
+      - uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
+        with:
+          version: ${{ steps.golangci-lint-version.outputs.version }}
 
   fmt:
     runs-on: ubuntu-latest
